--- a/la-mia-pizzeria-static/Views/Pizza/Index.cshtml
+++ b/la-mia-pizzeria-static/Views/Pizza/Index.cshtml
@@ -1,5 +1,45 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model Pizza[]
 @{
+    @ViewData["Title"]
+    ;
+    var pizzas = Model;
+}
+
+@if (pizzas.Length is 0)
+{
+    <p class="text-center">Non ci sono pizze</p>
+}
+else
+{
+    <div class="text-center container">
+        <table class="table">
+            <thead>
+
+                <tr>
+                    <th scope="col">Numero</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Descrizione</th>
+                    <th scope="col">Foto</th>
+                    <th scope="col">Prezzo(€)</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var pizza in pizzas)
+                {
+                    <tr>
+                        <td>@pizza.Id</td>
+                        <td>
+                            <a class="text-decoration-none" href="@Url.Action("Show", "Pizza", new {Id = pizza.Id})">@pizza.Name</a>
+                        </td>
+                        <td>@pizza.Description</td>
+                        <td><img class="img-fluid w-25" src="@pizza.Foto" /></td>
+                        <td>@pizza.Price</td>
+                    </tr>
+
+                }
+
+            </tbody>
+        </table>
+    </div>
+
 }
